fix(core): Merge multiple system messages and set it as the first beginning message